--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
-  "name": "my-bot",
+  "name": "Recast-ai-starter-kit",
   "version": "1.0.0",
-  "description": "B4S Bot",
-  "main": "index.js",
+  "description": "A bot built with Recast.AI",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "nodemon src/server.js",
+    "prod": "node src/server.js",
+    "lint": "eslint src/"
   },
+  "author": "Recast",
+  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DennisFred/BforS.git"
+    "url": "git@github.com:RecastAI/starter-NodeJS.git"
   },
-  "author": "Dennis Schilling",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DennisFred/BforS/issues"
-  },
-  "homepage": "https://github.com/DennisFred/BforS#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "recastai": "^3.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.2.0",
+    "eslint-config-zavatta": "^4.2.0",
+    "eslint-plugin-import": "^1.6.1",
+    "nodemon": "^1.11.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-runtime"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "zavatta",
+    "rules": {
+      "no-console": 0,
+      "callback-return": 0
+    }
   }
 }
